Changed: Code highlighting is now done per section. This works because the highlighter uses simple matching that requires no context. Fixed: Empty code blocks are now invisible in "narrow" and "very narrow" layouts.

--- a/doc.css
+++ b/doc.css
@@ -112,6 +112,10 @@ only screen and (max-width: 60em) {
 	#docgo .doc {
 		min-width: 0em;
 	}
+
+	#docgo div.td.code.empty { 
+		display: none;
+	}
 }
 
 /* Very narrow viewports */
